samples/_failures_safe/1761504981_133281_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c7a59da.c: In function ‘main’:
./samples/SAFE/__tmp_8c7a59da.c:118:5: error: ‘MAT’ undeclared (first use in this function)
  118 |     MAT
      |     ^~~
./samples/SAFE/__tmp_8c7a59da.c:118:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_8c7a59da.c:118:8: error: expected ‘;’ at end of input
  118 |     MAT
      |        ^
      |        ;
./samples/SAFE/__tmp_8c7a59da.c:118:5: error: expected declaration or statement at end of input
  118 |     MAT
      |     ^~~
